change site settings

--- a/_config.yml
+++ b/_config.yml
@@ -1,12 +1,12 @@
 # Site settings
-title: Hux Blog
-SEOTitle: 黄玄的博客 | Hux Blog
+title: Jamboxx-infinite
+SEOTitle: Jamboxx-infinite| AI music for everyone
 header-img: img/home-bg.jpg
-email: huxpro@gmail.com
-description: "这里是 @Hux黄玄 的个人博客，与你一起发现更大的世界 | 要做一个有 swag 的程序员"
+email: wesley.xu.23@ucl.ac.uk
+description: "Jamboxx-infinite is an AI music platform that allows you to create and share music with the world."
 keyword: "黄玄, Hux黄玄, Hux, 鬼栈, huxpro, @huxpro, 黄玄的博客, Hux Blog, 博客, 个人网站, 互联网, Web, JavaScript, React, React Native, 前端, 设计"
-url: "https://wes1eyyy.github.io" # your host, for absolute URL
-baseurl: "/jamboxx-infinite.github.io" # for example, '/blog' if your blog hosted on 'host/blog'
+url: "https://wes1eyyy.github.io/jamboxx-infinite" # your host, for absolute URL
+baseurl: "" # for example, '/blog' if your blog hosted on 'host/blog'
 
 # Publish posts or collection documents with a future date.
 future: true
