--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@ SEOTitle: Jamboxx-infinite| AI music for everyone
 header-img: img/home-bg.jpg
 email: wesley.xu.23@ucl.ac.uk
 description: "Jamboxx-infinite is an AI music platform that allows you to create and share music with the world."
-keyword: ""
+keyword: "To be added..."
 url: "https://wes1eyyy.github.io" # your host, for absolute URL
 baseurl: "/jamboxx-infinite.github.io" # for example, '/blog' if your blog hosted on 'host/blog'
 
