--- a/_config.yml
+++ b/_config.yml
@@ -5,8 +5,8 @@ header-img: img/home-bg.jpg
 email: wesley.xu.23@ucl.ac.uk
 description: "Jamboxx-infinite is an AI music platform that allows you to create and share music with the world."
 keyword: "To be added..."
-url: "https://wes1eyyy.github.io" # your host, for absolute URL
-baseurl: "/jamboxx-infinite.github.io" # for example, '/blog' if your blog hosted on 'host/blog'
+url: "https://github.com/Wes1eyyy/jamboxx-infinite.github.io" # your host, for absolute URL
+baseurl: "" # for example, '/blog' if your blog hosted on 'host/blog'
 
 # Publish posts or collection documents with a future date.
 future: true
