--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -28,7 +28,7 @@ jobs:
           bundle install
 
       - name: Build Jekyll site
-        run: bundle exec jekyll build --baseurl "/jamboxx-infinite.github.io"
+        run: bundle exec jekyll build --baseurl "/"
         env:
           JEKYLL_ENV: production
 
